--- a/app/views/director_templates/list.html.erb
+++ b/app/views/director_templates/list.html.erb
@@ -19,7 +19,8 @@
       <td><%= a_director.name%></td>
       <td><%= a_director.dob%></td>
       <td>
-        <a href="/directors/<= % a_director.id"%> Show details</td>
+        <a href="/directors/<%= a_director.id %>"> Show details</a>
+      </td>
     </tr>
   <% end %>
 </table>
