--- a/app/views/director_templates/details.html.erb
+++ b/app/views/director_templates/details.html.erb
@@ -1,1 +1,28 @@
-howdy
+<h1>Director #<%= @the_director.id %> details </h1>
+
+<a href="/directors">Go back</a>
+
+<hr>
+
+<dl>
+  <dt>Name</dt>
+  <dd><%= @the_director.name %></dd>
+
+  <dt>Dob/dt>
+  <dd><%= @the_director.dob %></dd>
+
+  <dt>Bio</dt>
+  <dd><%= @the_director.bio %></dd>
+
+  <dt>Image</dt>
+  <dd><img src="<%= @the_director.image%>" width="200"></dd>
+
+  <dt>Created at</dt>
+  <dd><%= @the_director.created_at %></dd>
+
+  <dt>Updated at</dt>
+  <dd><%= @the_director.updated_at %></dd>
+
+</dl>
+
+<% matching_movies = Movie.where({:director_id ==> @the_director.id })%>
