--- a/app/views/director_templates/details.html.erb
+++ b/app/views/director_templates/details.html.erb
@@ -8,14 +8,14 @@
   <dt>Name</dt>
   <dd><%= @the_director.name %></dd>
 
-  <dt>Dob/dt>
+  <dt>Dob</dt>
   <dd><%= @the_director.dob %></dd>
 
   <dt>Bio</dt>
   <dd><%= @the_director.bio %></dd>
 
   <dt>Image</dt>
-  <dd><img src="<%= @the_director.image%>" width="200"></dd>
+  <dd><img src="<%= @the_director.image%>" width="100"></dd>
 
   <dt>Created at</dt>
   <dd><%= @the_director.created_at %></dd>
@@ -55,3 +55,42 @@
 <% end %>
 
 </table>
+
+<h1>Movie #<%= @the_movie.id %> details </h1>
+
+<a href="/directors">Go back</a>
+
+<hr>
+
+<dl>
+  <dt>Title</dt>
+  <dd><%= @the_movie.name %></dd>
+
+  <dt>Year</dt>
+  <dd><%= @the_movie.year %></dd>
+
+  <dt>Duration</dt>
+  <dd><%= @the_movie.duration %></dd>
+
+  <dt>Duration</dt>
+  <dd><%= @the_movie.description %></dd>
+
+  <dt>Image</dt>
+  <dd><img src="<%= @the_movie.image%>" width="100"></dd>
+
+  <dt>Director</dt>
+  <dd>
+    <% matching_records = Director.where ({ :id => @the_movie.director_id}) %>
+
+    <% the_director = matching_records.at(0)%>
+
+    <%= the_director.name %>
+  </dd>
+  
+  <dt>Created at</dt>
+  <dd><%= @the_movie.created_at %></dd>
+
+  <dt>Updated at</dt>
+  <dd><%= @the_movie.updated_at %></dd>
+
+</dl>
