--- a/app/views/director_templates/list.html.erb
+++ b/app/views/director_templates/list.html.erb
@@ -48,7 +48,7 @@
       <td><%= a_movie.year%></td>
       <td>
         <% matching_records = Director.where({ :id => a_movie.director_id}) %>
-        <% the_director = matchning_records.at(0) %>
+        <% the_director = matching_records.at(0) %>
         <%= the_director.name %>
       </td>
       <td>
