i think things are happening

--- a/app/views/movie_templates/details.html.erb
+++ b/app/views/movie_templates/details.html.erb
@@ -4,7 +4,7 @@
 
 <dl>
   <dt>Title</dt>
-  <dd><%= @the_movie.name %></dd>
+  <dd><%= @the_movie.title %></dd>
 
   <dt>Year</dt>
   <dd><%= @the_movie.year %></dd>
